force-app-metadata-removed/main/default/objects/Surgery__c/fields/CCG__c.field-meta.xml
<CustomField>
    <fullName>CCG__c</fullName>
    <label>CCG</label>
    <referenceTo>CCG__c</referenceTo>
    <relationshipLabel>Surgeries</relationshipLabel>
    <relationshipName>Surgeries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>