force-app-metadata-removed/main/default/objects/Surgery__c/fields/ParentSurgery__c.field-meta.xml
<CustomField>
    <fullName>ParentSurgery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Surgery</label>
    <referenceTo>Surgery__c</referenceTo>
    <relationshipLabel>Branch Surgeries</relationshipLabel>
    <relationshipName>Surgeries</relationshipName>
    <type>Lookup</type>
</CustomField>