force-app-metadata-removed/main/default/objects/Surgery__c/listViews/Branch_Surgeries.listView-meta.xml
<ListView>
    <fullName>Branch_Surgeries</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ParentSurgery__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Branch Surgeries</label>
</ListView>